RESOLVED FIXED215993
[JSC] async function cannot appear in single-statement context
https://bugs.webkit.org/show_bug.cgi?id=215993
Summary [JSC] async function cannot appear in single-statement context
Yusuke Suzuki
Reported 2020-08-30 16:04:39 PDT
[JSC] async function cannot appear in single-statement context
Attachments
Patch (8.35 KB, patch)
2020-08-30 16:09 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-08-30 16:09:11 PDT
Yusuke Suzuki
Comment 2 2020-08-30 18:11:46 PDT
Comment on attachment 407578 [details] Patch Thanks!
EWS
Comment 3 2020-08-30 18:26:34 PDT
Committed r266340: <https://trac.webkit.org/changeset/266340> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407578 [details].
Radar WebKit Bug Importer
Comment 4 2020-08-30 18:27:15 PDT
Note You need to log in before you can comment on or make changes to this bug.