[JSC] async function cannot appear in single-statement context https://bugs.webkit.org/show_bug.cgi?id=215993

Reviewed by Darin Adler.

JSTests:

* stress/async-function-lookahead.js: Added.
(testSyntax):
(testSyntaxError):
(testSyntax.false.async t):
(testSyntaxError.false.async t):
* test262/expectations.yaml:

Source/JavaScriptCore:

The following code is syntax error[1] because ExpressionStatement has `async [no LineTerminator here] function` lookahead.

    if (false)
        async function t() { }

[1]: https://tc39.es/ecma262/#sec-expression-statement

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseStatement):
(JSC::Parser<LexerType>::maybeParseAsyncFunctionDeclarationStatement): Deleted.
* parser/Parser.h:


Canonical link: https://commits.webkit.org/228776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266340 268f45cc-cd09-0410-ab3c-d52691b4dbfc